ML01 - Product Page Styling  - Add missing phpdocs  - Use escaper in templates  - Correct spacings in style/js

--- a/app/design/frontend/Magebit/learning/web/css/source/_extend.less
+++ b/app/design/frontend/Magebit/learning/web/css/source/_extend.less
@@ -111,7 +111,8 @@
               margin-right: 20px;
               letter-spacing: 0;
 
-              button.decrease, button.increase {
+              button.decrease,
+              button.increase {
                 height: 100%;
                 width: 52px;
                 background: #FFFFFF;
@@ -131,7 +132,8 @@
               }
 
               button.increase {
-                &::before, &::after {
+                &::before,
+                &::after {
                   content: "";
                   background: #FF5501;
                   position: absolute;
@@ -281,11 +283,6 @@
                     img {
                       margin: 0;
                       height: 110px;
-                    }
-
-                    .product-image-container {
-                      .product-image-wrapper {
-                      }
                     }
                   }
 
